# syna

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  sphinx.yml
docs/: conf.py  index.rst  installation.rst
docs/examples/: dqn.rst  graph.rst  index.rst
examples/: dqn.py  tanh.py
examples/datasets/: mnist.py
src/syna/: __init__.py  core.py  dataloaders.py  datasets.py  functions.py  layers.py  models.py  optimizers.py  rl.py  utils.py
src/syna/algo/: dqn.py
src/syna/datasets/: __init__.py  datasets.py  mnist.py
src/syna/functions/: __init__.py  activation.py  function.py  loss.py  math.py
src/syna/layers/: __init__.py  layer.py  normalization.py  rnn.py
src/syna/models/: __init__.py  models.py
src/syna/optim/: __init__.py  adadelta.py  adagrad.py  adam.py  optimizer.py  sgd.py
src/syna/utils/: __init__.py  dataloaders.py  rl.py  transforms.py  util.py  viz.py
tests/: test_broadcast.py  test_functions.py  test_math.py
