[project]
name = "syna"
version = "0.2.0a1"
description = "Syna is a lightweight machine learning framework inspired by DeZero."
readme = "README.md"
authors = [
    { name = "sql-hkr", email = "sql.hkr@gmail.com" }
]
requires-python = ">=3.13"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "gymnasium[classic-control]>=1.2.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "sphinx>=8.2.3",
]
